tests/const_top_assign_bad.stderr
tests/const_top_assign_bad.hop:5:2: error: HOP2004: type mismatch: assignment target is const
