tests/const_top_assign_bad.hop
// Verifies const top-level assign is rejected.
const X i32 = 1

fn main() {
	X = 2
}
